@startuml

title __APP's Class Diagram__\n

  namespace com.androidtutorialshub.loginregister {
    class com.androidtutorialshub.loginregister.BuildConfig {

    }
  }
  

  namespace com.cs360.simplestocks.activities {
    class com.cs360.simplestocks.activities.LoginActivity {
    }
  }
  

  namespace com.cs360.simplestocks.activities {
    class com.cs360.simplestocks.activities.ui{
    }
  }

    namespace com.cs360.simplestocks.activities {
           class com.cs360.simplestocks.activities.ui.account{
           }
         }

             namespace com.cs360.simplestocks.activities {
               class com.cs360.simplestocks.activities.ui.home{
               }
             }
                          namespace com.cs360.simplestocks.activities {
                            class com.cs360.simplestocks.activities.ui.search{
                            }
                          }

                                       namespace com.cs360.simplestocks.activities {
                                         class com.cs360.simplestocks.activities.ui.settings{
                                         }
                                       }
  

  namespace com.cs360.simplestocks.activities {
    class com.cs360.simplestocks.activities.RegisterActivity {
    }
  }
  

  namespace com.cs360.simplestocks.activities {
    class com.cs360.simplestocks.activities.UsersListActivity {
    }
  }
  

  namespace com.cs360.simplestocks.adapters {
    class com.cs360.simplestocks.adapters.UsersRecyclerAdapter {
    }
  }
  

  namespace com.cs360.simplestocks.helpers {
    class com.cs360.simplestocks.helpers.InputValidation {
    }
  }
  

  namespace com.cs360.simplestocks.model {
    class com.cs360.simplestocks.model.User {
    }
  }

  namespace com.cs360.simplestocks.utilities{
   class com.cs360.simplestocks.utilities.GetStockData {
   }
   }
  

  


  

  namespace com.cs360.simplestocks.test {
    namespace networkConnect {
      class com.cs360.simplestocks.testNetworkConnect.Utility {
      }
    }
  }
  

  com.cs360.simplestocks.activities.LoginActivity .up.|> android.view.View.OnClickListener
  com.cs360.simplestocks.activities.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.cs360.simplestocks.activities.LoginActivity o-- com.cs360.simplestocks.sql.UserDatabaseHelper : databaseHelper
  com.cs360.simplestocks.activities.LoginActivity o-- com.cs360.simplestocks.helpers.InputValidation : inputValidation
  com.cs360.simplestocks.activities.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.cs360.simplestocks.activities.RegisterActivity .up.|> android.view.View.OnClickListener
  com.cs360.simplestocks.activities.RegisterActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.cs360.simplestocks.activities.RegisterActivity o-- com.cs360.simplestocks.sql.UserDatabaseHelper : databaseHelper
  com.cs360.simplestocks.activities.RegisterActivity o-- com.cs360.simplestocks.helpers.InputValidation : inputValidation
  com.cs360.simplestocks.activities.RegisterActivity o-- com.cs360.simplestocks.model.User : user



right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
